--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
     <color name="colorDivider">#BDBDBD</color>
-    <color name="colorRipple">#42FFFFFF</color>
+    <color name="colorRipple">#66FFFFFF</color>
     <color name="colorTransparentYellow">#B2FFC107</color>
     <color name="colorTransparentBlue">#B2B3E5FC</color>
+    <color name="colorDisabledGrey">#ACACAC</color>
 </resources>
