--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,8 +23,14 @@
         <item name="android:textColorHint">@android:color/white</item>
     </style>
 
+    <style name="ErrorText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
     <style name="EditTextWhite" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">@android:color/white</item>
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
     <style name="YellowButton">
