Registration flow done

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,143 +10,133 @@
             type="com.assignment.zolostays.viewmodel.LoginViewModel" />
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"
+        android:fillViewport="true"
         tools:context="com.assignment.zolostays.view.LoginActivity">
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_220dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_login" />
+
+            <!-- Dummy view to prevent the edit text from taking focus when activity starts -->
+            <LinearLayout
+                android:id="@+id/lnr_dummy"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:orientation="horizontal" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img_login" />
-
-                <!-- Dummy view to prevent the edit text from taking focus when activity starts -->
-                <LinearLayout
-                    android:id="@+id/lnr_dummy"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:orientation="horizontal" />
+                android:orientation="vertical"
+                android:padding="@dimen/_30dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/_30dp"
-                    android:paddingStart="@dimen/_30dp"
-                    android:paddingEnd="@dimen/_30dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/_10dp"
+                        android:src="@drawable/ic_phone" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/txt_input_layout_phone"
+                        style="@style/TextInputLayoutYellow"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:hint="@string/hint_phone_number"
+                        app:errorTextAppearance="@style/ErrorText">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginEnd="@dimen/_10dp"
-                            android:src="@drawable/ic_phone" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/txt_input_layout_phone"
-                            style="@style/TextInputLayoutYellow"
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_phone"
+                            style="@style/EditTextWhite"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_phone_number"
-                            app:errorTextAppearance="@style/ErrorText">
-
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/edt_phone"
-                                style="@style/EditTextWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:inputType="phone"
-                                android:maxLength="10"
-                                android:text="@={loginViewModel.phoneNumber}"/>
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginEnd="@dimen/_10dp"
-                            android:src="@drawable/ic_key" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/txt_input_layout_password"
-                            style="@style/TextInputLayoutYellow"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/hint_password"
-                            app:errorTextAppearance="@style/ErrorText"
-                            app:passwordToggleEnabled="true"
-                            app:passwordToggleTint="@android:color/white">
-
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/edt_password"
-                                style="@style/EditTextWhite"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:inputType="textPassword"
-                                android:maxLength="10"
-                                android:text="@={loginViewModel.password}"/>
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <Button
-                        android:id="@+id/btn_login"
-                        style="@style/YellowButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_30dp"
-                        android:enabled="@{loginViewModel.loginEnabled}"
-                        android:onClick="@{loginViewModel::onClickLogin}"
-                        android:text="@string/btn_login" />
-
-                    <TextView
-                        android:id="@+id/txt_forgot_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_20dp"
-                        android:gravity="center_horizontal"
-                        android:text="@string/txt_forgot_password"
-                        android:textColor="@android:color/white" />
-
-                    <Button
-                        android:id="@+id/btn_create_account"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_30dp"
-                        android:background="@drawable/bg_blue_btn"
-                        android:text="@string/btn_create_account"
-                        android:textColor="@android:color/white" />
+                            android:inputType="phone"
+                            android:maxLength="10"
+                            android:text="@={loginViewModel.phoneNumber}" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="@dimen/_10dp"
+                        android:src="@drawable/ic_key" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/txt_input_layout_password"
+                        style="@style/TextInputLayoutYellow"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_password"
+                        app:errorTextAppearance="@style/ErrorText"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@android:color/white">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_password"
+                            style="@style/EditTextWhite"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword"
+                            android:maxLength="10"
+                            android:text="@={loginViewModel.password}" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_login"
+                    style="@style/YellowButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30dp"
+                    android:enabled="@{loginViewModel.loginEnabled}"
+                    android:onClick="@{loginViewModel::onClickLogin}"
+                    android:text="@string/btn_login" />
+
+                <TextView
+                    android:id="@+id/txt_forgot_password"
+                    style="@style/WhiteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/txt_forgot_password" />
+
+                <Button
+                    android:id="@+id/btn_create_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30dp"
+                    android:background="@drawable/bg_blue_btn"
+                    android:onClick="@{loginViewModel::onClickCreateAccount}"
+                    android:text="@string/btn_create_account"
+                    android:textColor="@android:color/white" />
             </LinearLayout>
-
-        </ScrollView>
-
-    </android.support.design.widget.CoordinatorLayout>
+        </LinearLayout>
+    </ScrollView>
 </layout>
