--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="_10dp">10dp</dimen>
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_20dp">20dp</dimen>
+    <dimen name="_16dp">16dp</dimen>
+    <dimen name="font_20sp">20sp</dimen>
+    <dimen name="font_26sp">26sp</dimen>
+    <dimen name="_220dp">220dp</dimen>
 </resources>
