--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="font_20sp">20sp</dimen>
     <dimen name="font_26sp">26sp</dimen>
     <dimen name="_220dp">220dp</dimen>
+    <dimen name="font_40sp">40sp</dimen>
 </resources>
